Jazzy: fixed clipped bullet symbols in Safari 12.1 (macOS)

--- a/Jazzy/themes/jony_codewins/assets/css/jazzy.css.scss
+++ b/Jazzy/themes/jony_codewins/assets/css/jazzy.css.scss
@@ -111,7 +111,7 @@ a {
 // Lists
 
 ul {
-  padding-left: 15px;
+  padding-left: 20px;
 }
 li {
   line-height: 1.8em;
